[package]
name = "rc_gcode"
version = "0.1.0"
edition = "2024"
authors = ["angcyo@126.com"]
license = "MIT"
repository = "https://github.com/angcyo/rust_crates"
description = "GCode parser"
readme = "README.md"
keywords = ["gcode"]

[dependencies]
# https://crates.io/crates/lyon_path/
lyon_path = "1.0.7"