[package]
name = "rc_gcode"
version = "0.1.1"
edition = "2024"
authors = ["angcyo@126.com"]
license = "MIT"
repository = "https://github.com/angcyo/rust_crates"
description = "GCode parser"
readme = "README.md"
keywords = ["gcode"]

[dependencies]
# https://crates.io/crates/lyon_path/
lyon_path = "1.0.7"
# https://crates.io/crates/lyon_algorithms
lyon_algorithms = "1.0.5"

# https://crates.io/crates/rc_bytes
rc_bytes = "0.1.1"

# 只在测试时使用的依赖
[dev-dependencies]
rc_basis = { path = "../rc_basis" }
#rc_bytes = { path = "../rc_bytes" }