[package]
name = "rc_image"
version = "0.1.0"
edition = "2024"

[dependencies]
rc_basis = { path = "../rc_basis" }

# 图片对象
# https://crates.io/crates/image
image = "0.25.6"
# 图片处理
# https://crates.io/crates/imageproc
imageproc = "0.25.0"

# 线性代数库, 透视变换
# https://crates.io/crates/nalgebra
nalgebra = "0.34.0"