[package]
name = "rc_log"
version = "0.1.0"
edition = "2024"

[dependencies]
# 日志处理
# https://crates.io/crates/log
log = "0.4.27"

# 日志处理
# https://crates.io/crates/env_logger
env_logger = "0.11.8"
# 日志处理
# https://crates.io/crates/colog
colog = "1.3.0"
# 日志处理
# https://crates.io/crates/simple_logger
simple_logger = "5.0.0"

# 日志处理
# https://crates.io/crates/tracing
tracing = "0.1.41"
# https://crates.io/crates/tracing-subscriber
tracing-subscriber = "0.3.19"